# airbyte

./: deps.toml
.github/workflows/: mongodb-source-test.yml
airbyte-integrations/connectors/destination-amplitude/: Dockerfile  README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-amplitude/destination_amplitude/: __init__.py  amplitude_client.py  destination.py  spec.json  utils.py
airbyte-integrations/connectors/destination-amplitude/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/destination-google-ads/: Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/destination-google-ads/destination_google_ads/: __init__.py  destination.py  error_handler.py  google_ads_handler.py  google_ads_offline_conversion.py  run.py  spec.yaml  utils.py
airbyte-integrations/connectors/destination-google-ads/integration_tests/: configured_catalog.json  messages.jsonl
airbyte-integrations/connectors/destination-partnerstack/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-partnerstack/destination_partnerstack/: __init__.py  client.py  destination.py  run.py  spec.yaml
airbyte-integrations/connectors/destination-partnerstack/sample_files/: configured_catalog.json
airbyte-integrations/connectors/destination-planhat/: README.md  main.py  metadata.yaml  pyproject.toml  setup.py
airbyte-integrations/connectors/destination-planhat/destination_planhat/: __init__.py  client.py  destination.py  run.py  spec.yaml
airbyte-integrations/connectors/destination-planhat/integration_tests/: integration_test.py
airbyte-integrations/connectors/destination-salesforce/destination_salesforce/: client.py  spec.yaml
airbyte-integrations/connectors/destination-salesforce/integration_tests/: configured_catalog.json  integration_test.py  messages.jsonl
airbyte-integrations/connectors/destination-sftp-json/destination_sftp_json/: client.py  spec.json
airbyte-integrations/connectors/destination-tapfiliate/: Dockerfile  README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-tapfiliate/destination_tapfiliate/: __init__.py  destination.py  spec.json  tapfiliate_client.py
airbyte-integrations/connectors/destination-tapfiliate/integration_tests/: configured_catalog.json  messages.jsonl
airbyte-integrations/connectors/destination-userpilot/: Dockerfile  README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/destination-userpilot/destination_userpilot/: __init__.py  client.py  destination.py  spec.yaml
airbyte-integrations/connectors/destination-userpilot/integration_tests/: configured_catalag
airbyte-integrations/connectors/destination-webhook/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-webhook/destination_webhook/: __init__.py  client.py  destination.py  run.py  spec.json
airbyte-integrations/connectors/source-airbyte/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-airbyte/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-airbyte/source_airbyte/: __init__.py  manifest.yaml  run.py  source.py
airbyte-integrations/connectors/source-bing-ads/source_bing_ads/: report_streams.py
airbyte-integrations/connectors/source-brevo/: Dockerfile  README.md  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/source-brevo-internal/: README.md  acceptance-test-config.yml  manifest.yaml  metadata.yaml
airbyte-integrations/connectors/source-brevo/source_brevo/: spec.yaml
airbyte-integrations/connectors/source-diabolocom/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  setup.py
airbyte-integrations/connectors/source-diabolocom/integration_tests/: abnormal_state.json  configured_catalog.json  (+2 more)
airbyte-integrations/connectors/source-google-ads/: metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-mailchimp/: Dockerfile  setup.py
airbyte-integrations/connectors/source-mongodb-python/: README.md  acceptance-test-config.yml  discover.py  main.py  metadata.yaml  pyproject.toml  s.txt
airbyte-integrations/connectors/source-mongodb-python/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-mongodb-python/source_mongodb_python/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-mongodb-python/unit_tests/: test_incremental_streams.py  test_read_oplog.py  test_source.py  test_streams.py
airbyte-integrations/connectors/source-mongodb-v2/: build.gradle
airbyte-integrations/connectors/source-planhat/: README.md  acceptance-test-config.yml  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-tapfiliate/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-zendesk-support-custom/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
docs/integrations/destinations/: partnerstack.md  planhat.md  salesforce.md
docs/integrations/sources/: bing-ads.md  brevo.md  google-ads.md  planhat.md
(+91 files in other folders)
